# backports.httpmethod

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: constraints.txt  release.yaml  test.yaml
src/backports/httpmethod/: __init__.py  _httpmethod.py
tests/: __init__.py  test_httpmethod.py
