[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "backports-httpmethod"
description = "A backport of Python 3.11+ `http.HTTPMethod` enum"
readme = "README.md"
keywords = [
  "backports",
  "enum",
  "http",
  "httpmethod",
]
license = "MIT"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = [
  "version",
]
dependencies = [
  "backports-strenum; python_version<'3.11'",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.urls]
Documentation = "https://github.com/edgarrmondragon/backports.httpmethod#readme"
Issues = "https://github.com/edgarrmondragon/backports.httpmethod/issues"
Source = "https://github.com/edgarrmondragon/backports.httpmethod"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "typing" },
]
lint = [
  "pyproject-fmt~=2.25.2",
  "ruff~=0.15.20",
]
typing = [
  "mypy~=2.2.0",
]

[tool.hatch.build]
targets.wheel.packages = [
  "src/backports",
]
[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.ruff]
line-length = 120
preview = true
[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "COM",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Conflict with the Ruff formatter
  "COM812",
  "ISC001",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]
flake8-tidy-imports.ban-relative-imports = "all"

[tool.pyproject-fmt]
indent = 2
keep_full_version = true
max_supported_python = "3.15"
table_format = "long"

[tool.mypy]
mypy_path = "src"
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]

[tool.tox]
requires = [
  "tox>=4.55",
]
env_list = [
  "lint",
  { prefix = "3.", start = 7 },
  "pypy",
  "typing",
]
[tool.tox.env.lint]
description = "lint"
dependency_groups = [
  "lint",
]
commands = [
  [ "pyproject-fmt", "pyproject.toml" ],
  [ "ruff", "check", { replace = "posargs", default = [], extend = true } ],
  [ "ruff", "format", { replace = "posargs", default = [], extend = true } ],
]
labels = [ "lint" ]
[tool.tox.env.typing]
description = "type check"
dependency_groups = [
  "typing",
]
commands = [
  [
    "mypy",
    "--install-types",
    "--non-interactive",
    "--explicit-package-bases",
    { replace = "posargs", default = [
      "src/backports/httpmethod",
      "tests",
    ], extend = true },
  ],
]
labels = [ "lint" ]
[tool.tox.env_run_base]
description = "run unit tests on Python {base_python}"
commands = [
  [
    "python",
    "-Im",
    "unittest",
    "-v",
  ],
]
